@@ -38,6 +38,8 @@
 <p>2015-04-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/attribute.c (ReadMSBLong): Hopefully silence Coverity
+10276 &quot;Unintended sign extension&quot;.</li>
 <li>coders/sgi.c (ReadSGIImage, WriteSGIImage): Fix Coverity 10243,
 10244, 10247, 10254, and 10294 &quot;Unintended sign extension&quot;.</li>
 </ul>
