@@ -1,5 +1,8 @@
 2015-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/attribute.c (ReadMSBLong): Hopefully silence Coverity
+	10276 "Unintended sign extension".
+
 	* coders/sgi.c (ReadSGIImage, WriteSGIImage): Fix Coverity 10243,
 	10244, 10247, 10254, and 10294 "Unintended sign extension".
 
